// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MDXCAsset should parse config with images correctly. 1`] = `
"import React, { createElement, createFactory } from 'react'

export default function({ factories={} }) {
  const {
    h1 = createFactory('h1'),
    h2 = createFactory('h2'),
    img = createFactory('img'),
    p = createFactory('p'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

h1({\\"id\\": \\"Test\\"},
  \\"Test\\",
),
h2({\\"id\\": \\"H2\\"},
  \\"H2\\",
),
p({},
  img({\\"src\\": \\"./img.jpg\\", \\"alt\\": \\"\\"}),
),
createElement(\\"img\\", { src: \\"./img.jpg\\" })

  )
}
"
`;

exports[`MDXCAsset should parse markdown correctly. 1`] = `
"import React, { createElement, createFactory } from 'react'

export default function({ factories={} }) {
  const {
    h1 = createFactory('h1'),
    h2 = createFactory('h2'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

h1({\\"id\\": \\"Test\\"},
  \\"Test\\",
),
h2({\\"id\\": \\"H2\\"},
  \\"H2\\",
)

  )
}
"
`;

exports[`MDXCAsset should parse with preact. 1`] = `
"import preact, { h } from \\"preact\\"
const createFactory = tagName => (...args) => h(tagName, ...args)

export default function({ factories={} }) {
  const {
    h1 = createFactory('h1'),
    h2 = createFactory('h2'),
    wrapper = createFactory('div'),
  } = factories

  return wrapper({},

h1({\\"id\\": \\"Test\\"},
  \\"Test\\",
),
h2({\\"id\\": \\"H2\\"},
  \\"H2\\",
)

  )
}
"
`;
